# Defensive-Trajectory-Prediction-Model

./: .gitignore  pyproject.toml
.claude/: gsd-file-manifest.json  settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-data-pipeline-and-validation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-feature-engineering-and-dataset-wrappers/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/: splits.json
results/: ablation_table.csv  per_play_rmse_a.csv  per_play_rmse_a_seed123.csv  per_play_rmse_a_seed42.csv  per_play_rmse_a_seed456.csv  per_play_rmse_b.csv  per_play_rmse_b_seed123.csv  per_play_rmse_b_seed42.csv  per_play_rmse_b_seed456.csv  per_position_rmse_a.csv  per_position_rmse_b.csv
scripts/: evaluate_ablation.py  overfit_test.py  run_pipeline.py  run_training.py  smoke_test_dataset.py  train_model.py  validate_normalization.py
src/data/: dataset.py  loader.py  preprocessor.py  sample_builder.py
src/model/: __init__.py  trajectory_model.py
tests/: conftest.py  test_dataset.py  test_evaluation.py  test_model.py  test_pipeline.py  test_training.py
(+16 files in other folders)
